// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`class declaration (1) - empty body 1`] = `
"<script lang="ts">
  class Foo {}
</script>
"
`;

exports[`class declaration (2) 1`] = `
"<script lang="ts">
  class Rectangle {
    constructor(height, width) {
      this.height = height;
      this.width = width;
    }
    area() {
      return this.height * this.width;
    }
  }
</script>
"
`;

exports[`class declaration (3) - with getter/setter 1`] = `
"<script lang="ts">
  class User {
    constructor(name) {
      // invokes the setter
      this.name = name;
    }

    get name() {
      return this._name;
    }

    set name(value) {
      if (value.length < 4) {
        alert("Name is too short.");
        return;
      }
      this._name = value;
    }
  }
</script>
"
`;

exports[`class declaration (4) - with static things 1`] = `
"<script lang="ts">
  class ClassWithStaticMethod {
    static staticProperty = "someValue";
    static staticMethod() {
      return "static method has been called.";
    }
    static {
      console.log("Class static initialization block called");
    }
  }
</script>
"
`;

exports[`class expression 1`] = `
"<script lang="ts">
  const Rectangle = class {
    constructor(height, width) {
      this.height = height;
      this.width = width;
    }
    area() {
      return this.height * this.width;
    }
  };
</script>
"
`;
